correcting section styles and adding content to the HTML

--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;900&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NLW Sports</title>
+
+    <link rel="stylesheet" href="./styles.css">
+
 </head>
+
 <body>
     <header>
         <div>
-            <img src="assets\9amdhywa0xa31.jpg" alt="Foto Korra">
+            <a href="https://github.com/rlbernardo" target="_blank">
+                <img src="assets\rblc.jpg" alt="imagem do header">
+            </a>
+
         </div>
     </header>
 
     <main>
-        <section class="games-list">
+        <section>
             <div>
                 <h2>Meus jogos</h2>
                 <p>Meus games favoritos</p>
@@ -22,34 +35,30 @@
                 <ul class="games-list">
 
                     <li>
-                        <a
-                        target="_blank" 
-                        href="https://www.twitch.tv/directory/game/VALORANT">
-                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/516575-285x380.jpg" alt="imagem do jogo VALORANT">
+                        <a target="_blank" href="https://www.twitch.tv/directory/game/VALORANT">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/516575-285x380.jpg"
+                                alt="imagem do jogo VALORANT">
                         </a>
                     </li>
 
                     <li>
-                        <a
-                        target="_blank" 
-                        href="https://www.twitch.tv/directory/game/Dead%20by%20Daylight">
-                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/491487-285x380.jpg" alt="imagem do jogo dead by daylight">
+                        <a target="_blank" href="https://www.twitch.tv/directory/game/Drake%20Hollow">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/515154_IGDB-285x380.jpg"
+                                alt="imagem do jogo Drake Hollow">
                         </a>
                     </li>
 
                     <li>
-                        <a
-                        target="_blank" 
-                        href="https://www.twitch.tv/directory/game/The%20Last%20of%20Us%20Part%20I">
-                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/294724507_IGDB-285x380.jpg" alt="imagem do jogo TLOU 1">
+                        <a target="_blank" href="https://www.twitch.tv/directory/game/Dead%20by%20Daylight">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/491487-285x380.jpg"
+                                alt="imagem do jogo dead by daylight">
                         </a>
                     </li>
 
                     <li>
-                        <a
-                        target="_blank" 
-                        href="https://www.twitch.tv/directory/game/Madison">
-                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/1535635666_IGDB-285x380.jpg" alt="imagem do jogo Madison">
+                        <a target="_blank" href="https://www.twitch.tv/directory/game/The%20Last%20of%20Us%20Part%20I">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/294724507_IGDB-285x380.jpg"
+                                alt="imagem do jogo TLOU 1">
                         </a>
                     </li>
 
@@ -57,7 +66,7 @@
             </div>
         </section>
 
-        <section class="canais-streamers-list">
+        <section>
             <div>
                 <h2>Canais e streamer</h2>
                 <p>Lista de canais e transmissões que não perco</p>
@@ -65,26 +74,23 @@
                 <ul class="canais-list">
 
                     <li>
-                        <a
-                        target="_blank" 
-                        href="https://www.twitch.tv/alanzoka">
-                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/15cec952-c1ba-4ff8-a79c-53c2fa5bd269-profile_image-150x150.png" alt="alanzoka">
+                        <a target="_blank" href="https://www.twitch.tv/alanzoka">
+                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/15cec952-c1ba-4ff8-a79c-53c2fa5bd269-profile_image-150x150.png"
+                                alt="alanzoka">
                         </a>
                     </li>
 
                     <li>
-                        <a
-                        target="_blank" 
-                        href="https://www.twitch.tv/vovo">
-                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/2c8843cb-034f-468e-96ad-39c9f376cd87-profile_image-150x150.png" alt="vovó">
+                        <a target="_blank" href="https://www.twitch.tv/vovo">
+                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/2c8843cb-034f-468e-96ad-39c9f376cd87-profile_image-150x150.png"
+                                alt="vovó">
                         </a>
                     </li>
 
                     <li>
-                        <a
-                        target="_blank" 
-                        href="https://www.twitch.tv/cellbit">
-                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/cb885149-f7f7-48f0-99ae-fe0a386ed3e2-profile_image-150x150.png" alt="cellbit">
+                        <a target="_blank" href="https://www.twitch.tv/cellbit">
+                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/cb885149-f7f7-48f0-99ae-fe0a386ed3e2-profile_image-150x150.png"
+                                alt="cellbit">
                         </a>
                     </li>
 
@@ -92,7 +98,7 @@
             </div>
         </section>
 
-        <section class="social-list">
+        <section>
             <div>
                 <h2>Minhas redes</h2>
                 <p>Se conecte comigo</p>
@@ -100,25 +106,19 @@
                 <ul class="social-list">
 
                     <li>
-                        <a
-                        target="_blank" 
-                        href="https://www.linkedin.com/in/rlbcruz/">
+                        <a target="_blank" href="https://www.linkedin.com/in/rlbcruz/">
                             <img src="https://img.icons8.com/office/344/linkedin.png" alt="linkedin">
                         </a>
                     </li>
 
                     <li>
-                        <a
-                        target="_blank" 
-                        href="https://www.instagram.com/robertadev.13/">
+                        <a target="_blank" href="https://www.instagram.com/robertadev.13/">
                             <img src="https://img.icons8.com/office/344/instagram-new.png" alt="instagram">
                         </a>
                     </li>
 
                     <li>
-                        <a
-                        target="_blank" 
-                        href="https://www.behance.net/">
+                        <a target="_blank" href="https://www.behance.net/">
                             <img src="https://img.icons8.com/office/344/facebook.png" alt="facebook">
                         </a>
                     </li>
@@ -128,6 +128,7 @@
         </section>
 
     </main>
-    
+
 </body>
+
 </html>
